--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <tr>
             <td>6</td>
             <td><a href="https://github.com/RAMAKRISHNA1303/React-6">REPOSITORY 6</a></td>
-            <td><a href="https://react-6-kohl.vercel.app/">DEPLOYMENT 6</a></td>
+            <td><a href="">DEPLOYMENT 6</a></td>
         </tr>
     </table>
 </body>
